--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Songs we know</title>
@@ -10,26 +10,26 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container" style="background-color:MediumSeaGreen;">
   <h2>SONGS</h2>
   <div class="list-group">
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Lost And Found</h4>
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Lost And Found</h4>
       <p class="list-group-item-text">F C Am G</p>
       <p class="list-group-item-text">Jag har bytt taktik...</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Birds Of A Feather</h4>
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Birds Of A Feather</h4>
       <p class="list-group-item-text">D Bm Em A</p>
       <p class="list-group-item-text">I want you to stay...</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Shallow</h4>
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Shallow</h4>
       <p class="list-group-item-text">Em G C D</p>
       <p class="list-group-item-text">Tell me something, girl...</p>
     </a>
     <a href="#" class="list-group-item">
-      <h4 class="list-group-item-heading">Hjärtat Slår Upp Sin Dörr</h4>
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Hjärtat Slår Upp Sin Dörr</h4>
       <p class="list-group-item-text">A D Fm E</p>
       <p class="list-group-item-text">Hela livet här har varit en tillsluten dörr...</p>
     </a>
