--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color: #6d8d8a;">
 
-<div class="container" style="background-color:MediumSeaGreen;">
+<div class="container" style="background-color:#a8c8a6;">
   <h2>SONGS</h2>
   <div class="list-group">
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Lost And Found</h4>
-      <p class="list-group-item-text">F C Am G</p>
+      <blockquote><p class="list-group-item-text">F C Am G</p></blockquote>
       <p class="list-group-item-text">Jag har bytt taktik...</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Birds Of A Feather</h4>
-      <p class="list-group-item-text">D Bm Em A</p>
+    <blockquote><p class="list-group-item-text">D Bm Em A</p></blockquote>
       <p class="list-group-item-text">I want you to stay...</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Shallow</h4>
-      <p class="list-group-item-text">Em G C D</p>
+      <blockquote><p class="list-group-item-text">Em G C D</p></blockquote>
       <p class="list-group-item-text">Tell me something, girl...</p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Hjärtat Slår Upp Sin Dörr</h4>
-      <p class="list-group-item-text">A D Fm E</p>
+      <blockquote><p class="list-group-item-text">A D Fm E</p></blockquote>
       <p class="list-group-item-text">Hela livet här har varit en tillsluten dörr...</p>
     </a>
   </div>
