--- a/index.html
+++ b/index.html
@@ -12,22 +12,26 @@
 
 <div class="container" style="background-color:#a8c8a6;">
   <h2>SONGS</h2>
+  <br>
   <div class="list-group">
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Lost And Found</h4>
       <blockquote><p class="list-group-item-text">F C Am G</p></blockquote>
       <p class="list-group-item-text">Jag har bytt taktik...</p>
     </a>
+    <br>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Birds Of A Feather</h4>
-    <blockquote><p class="list-group-item-text">D Bm Em A</p></blockquote>
+      <blockquote><p class="list-group-item-text">D Bm Em A</p></blockquote>
       <p class="list-group-item-text">I want you to stay...</p>
     </a>
+    <br>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Shallow</h4>
-      <blockquote><p class="list-group-item-text">Em G C D</p></blockquote>
+      <blockquote><p class="list-group-item-text">Em G C G D</p></blockquote>
       <p class="list-group-item-text">Tell me something, girl...</p>
     </a>
+    <br>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Hjärtat Slår Upp Sin Dörr</h4>
       <blockquote><p class="list-group-item-text">A D Fm E</p></blockquote>
