--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: #6d8d8a;">
+  
+  
 
-<div class="container" style="background-color:#a8c8a6;">
-  <h2>SONGS</h2>
+<div class="container" style="background-color:#a8c8a6;" class="animate-bounce">
+  <br>
   <div class="list-group">
+    <a href="#" class="list-group-item">
+      <p class="list-group-item-text"><img src="https://cdn.lospec.com/palette-examples/pastel-qt-palette-example-by-polyphorge-6087df.png" alt="cosy palette image"></p>
+    </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Lost And Found</h4>
       <blockquote><p class="list-group-item-text">F C Am G</p></blockquote>
