--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
   
 
 <div class="container" style="background-color:#a8c8a6;">
-  <h2>SONGS</h2>
   <br>
   <div class="list-group">
     <a href="#" class="list-group-item">
-      <p class="list-group-item-text"><img src="https://cdn.lospec.com/palette-examples/pastel-qt-palette-example-by-polyphorge-6087df.png" alt="cosy palette image"></p>
+      <p class="list-group-item-text"><img src="https://cdn.lospec.com/palette-examples/pastel-qt-palette-example-by-polyphorge-6087df.png" alt="cosy palette image" style= "width: 100%; object-fit: contain"></p>
     </a>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Lost And Found</h4>
