--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="#" class="list-group-item">
       <p class="list-group-item-text"><img src="https://cdn.lospec.com/palette-examples/pastel-qt-palette-example-by-polyphorge-6087df.png" alt="cosy palette image" style= "width: 100%; object-fit: contain"></p>
     </a>
+    <br>
     <a href="#" class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Lost And Found</h4>
       <blockquote><p class="list-group-item-text">F C Am G</p></blockquote>
@@ -40,6 +41,24 @@
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Hjärtat Slår Upp Sin Dörr</h4>
       <blockquote><p class="list-group-item-text">A D Fm E</p></blockquote>
       <p class="list-group-item-text">Hela livet här har varit en tillsluten dörr...</p>
+    </a>
+    <br>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Pink Skies</h4>
+      <blockquote><p class="list-group-item-text">C G Em D</p></blockquote>
+      <p class="list-group-item-text">The kids are in town...</p>
+    </a>
+    <br>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Say You Wont Let Go</h4>
+      <blockquote><p class="list-group-item-text">G D Em C</p></blockquote>
+      <p class="list-group-item-text">I met you in the dark...</p>
+    </a>
+    <br>
+    <a href="#" class="list-group-item">
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> If The World Was Ending</h4>
+      <blockquote><p class="list-group-item-text">A D Fm E</p></blockquote>
+      <p class="list-group-item-text">I was distracted...</p>
     </a>
   </div>
 </div>
