--- a/index.html
+++ b/index.html
@@ -57,8 +57,13 @@
     <br>
     <a class="list-group-item">
       <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> If The World Was Ending</h4>
-      <blockquote><p class="list-group-item-text">A D Fm E</p></blockquote>
+      <blockquote><p class="list-group-item-text">C Am F G | Am G C G F | F G C Am</p></blockquote>
       <p class="list-group-item-text">I was distracted...</p>
+    </a>
+    <a class="list-group-item">
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Dum</h4>
+      <blockquote><p class="list-group-item-text">F Am F Am | F C G Am | C Am F</p></blockquote>
+      <p class="list-group-item-text">Varför vill jag ha det...</p>
     </a>
   </div>
 </div>
