--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
       <blockquote><p class="list-group-item-text">F Am F Am | F C G Am | C Am F</p></blockquote>
       <p class="list-group-item-text">Varför vill jag ha det...</p>
     </a>
+    <br>
+    <a class="list-group-item">
+      <h4 class="list-group-item-heading"><span class="glyphicon glyphicon-music"></span> Försent För Edelweiss</h4>
+      <blockquote><p class="list-group-item-text">G C D G | C D G Em</p></blockquote>
+      <p class="list-group-item-text">Du säger att kärleken...</p>
+    </a>
   </div>
 </div>
 
